--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="Description" content="Star Wars planets, app written as a practise task">
   <title>Star Wars Planets</title>
   <base href="/">
 
