--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="Description" content="Star Wars planets, app written as a practise task">
+  <meta name="theme-color" content="#000000" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Star Wars Planets</title>
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest_app.json" />
 </head>
 <body>
+  <noscript>Your browser does not support Javascript, app will not work :(</noscript>
   <app-root></app-root>
 </body>
 </html>
